AP-18412: Update tycho pomless to tycho build and add jdk.dom.xml to classpath